# insurwise

./: .dockerignore  Dockerfile  README.md  fastapi_ml_model.ipynb  frontend.py  notes.md  pyproject.toml  requirements.txt
app/: main.py  ml.py  models.py  schemas.py  utils.py
frontend/: app.py
model/: ml.py
noteboooks/: fastapi_ml_model.ipynb
