[project]
name = "fastapi-model"
version = "0.1.0"
description = "Insurance Premium Prediction API with ML Model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.24.0",
]
