[project]
name = "fastapi-model"
version = "0.1.0"
description = "Insurance Premium Prediction API with ML Model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.24.0",
    "black>=26.1.0",
    "autopep8>=2.3.2",
    "yapf>=0.43.0",
    "isort>=7.0.0",
    "flake8>=7.3.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

